--- a/package.json
+++ b/package.json
@@ -295,6 +295,7 @@
 		"stylelint": "^13.7.0",
 		"svgstore-cli": "^1.3.1",
 		"terser": "^5.2.1",
+		"terser-webpack-plugin": "^4.2.2",
 		"typescript": "^4.0.3",
 		"webpack": "^5.10.3",
 		"webpack-bundle-analyzer": "^4.2.0",
